# E1-2

./: Dockerfile  QuizClass.py  README.md  RecordClass.py  pyproject.toml  quizclass.py
engine/: quiz_engine.py
models/: quiz.py  record.py
test/: test_input_manager.py  test_quiz_class.py  test_record_class.py
utils/: input_manager.py  json_manager.py
